[package]
name = "rfm9x"
version = "0.1.2"
authors = ["Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2018"
description = "RFM9x LoRa/FSK transceiver driver for Raspberry Pi in native Rust"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["iot","raspberry", "pi", "lora", "lorawan"]
repository = "https://git.pixelspark.nl/pixelspark/rfm9x-rust"

[dependencies]
bitflags = "2.3.1"
rppal = ">=0.14.1"
rand = "0.8.5"

[package.metadata.docs.rs]
default-target = "arm-unknown-linux-musleabi"