[package]
name = "rfm9x"
version = "0.1.43"
authors = ["Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2018"
description = "RFM9x LoRa/FSK transceiver driver for Raspberry Pi in native Rust"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["iot","raspberry", "pi", "lora", "lorawan"]
repository = "https://git.pixelspark.nl/pixelspark/rfm9x-rust"

[package.metadata.docs.rs]
default-target = "arm-unknown-linux-musleabi"

[dependencies]
bitflags = "2.4.1"
rppal = ">=0.14.1"
rand = "0.8.5"

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[build-dependencies]
cargo-make = "0.37.2"
cross = "0.2.5"
cargo-get = "1.0.0"
cargo-bump = "1.1.0"
